--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "aws-amplify": "^6.5.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.30",
     "react": "^18.3.1",
@@ -26,15 +27,23 @@
     "react-multi-carousel": "^2.8.5"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.1.1",
+    "@aws-amplify/backend-cli": "^1.2.5",
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "aws-cdk": "^2.154.1",
+    "aws-cdk-lib": "^2.154.1",
+    "constructs": "^10.3.0",
+    "esbuild": "^0.23.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "tsx": "^4.18.0",
+    "typescript": "^5.5.4",
     "vite": "^5.4.1"
   }
 }
